# GhostMarket

./: .gitignore  Anchor.toml  DEPLOYMENT_REPORT.md  IMPLEMENTATION_PLAN.md  MASTER_PLAN.md  PLAN_PHASE_1.md  PLAN_PHASE_2.md  PLAN_PHASE_3.md  PLAN_PHASE_4.md  PLAN_PHASE_5.md  PRIVACY_AUDIT.md  README.md  TECHNICAL_DOCUMENTATION.md  WALKTHROUGH_PHASE_2.md  WALKTHROUGH_PHASE_3.md  WALKTHROUGH_PHASE_4.md  WALKTHROUGH_PHASE_5.md  global_rules.md  package.json  pnpm-lock.yaml  task_list_phase_1.md  task_list_phase_2.md  task_list_phase_3.md  task_list_phase_4.md  task_list_phase_5.md  turbo.json
apps/api/: convert_key.ts  package.json
apps/api/src/: index.ts  openapi.yaml
apps/api/src/.well-known/: ai-plugin.json
apps/api/src/middleware/: x402.ts
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/market/: page.tsx
apps/web/src/app/operate/: page.tsx
apps/web/src/components/glass/: GlassPanel.tsx
apps/web/src/components/layout/: Footer.tsx
apps/web/src/components/neural/: NeuralBackground.tsx  NeuralNavbar.tsx
apps/web/src/components/providers/: SolanaProvider.tsx
apps/web/src/features/privacy/: zkUtils.ts
apps/web/src/hooks/: useGhostMarket.ts
apps/web/src/lib/idl/: ghost_market.json
programs/ghost_market/: Cargo.toml
programs/ghost_market/src/: error.rs  lib.rs  state.rs
programs/ghost_market/src/instructions/: execute_ghost_sale.rs  initialize_market.rs  list_item.rs  mod.rs  place_secret_bid.rs
tests/: ghost_market.ts
