[package]
name = "ghost_market"
version = "0.1.0"
description = "GhostMarket Core Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
